@@ -1,3 +1,7 @@
+11. Sep 2011 Christoph Thielecke <crissi99@gmx.de>
+	- gtktalog xml import fixed
+	- archivecontent is now imported at gtktalog xml import
+
 14. Aug 2011 Christoph Thielecke <crissi99@gmx.de>
 	- position of filelist extensions and max size for filecontent corrected 
 
